--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,55 @@
-
-.container {
-  background-color: #282c34;
-  color: black;
-
-  min-height: 100vh;
-  font-size: 24px;
-  
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+.btn {
+  padding:20px 40px;
+  border: 0;
+  font-size: 16px;
+  background-color: white;
+  margin: 10px;
+  cursor: pointer;
 }
 
-.container ul {
-  min-width: 600px;
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
+.primary {
+  color: rgb(8, 160, 8);
+  border: 2px solid rgb(8, 160, 8);
 }
 
-.container ul li {
-  background-color: #f6f6f6;
-  border: 1px solid #ddd;
-  border-radius: 25px;
-  padding: 12px;
-  margin-top: 10px;
+.primary:hover {
+  background-color: rgb(8, 160, 8);
+  color: white;
+}
+
+.danger {
+  color: rgb(155, 15, 15);
+  border: 2px solid rgb(155, 15, 15);
+}
+
+.danger:hover {
+  background-color: rgb(155, 15, 15);
+  color: white;
+}
+
+
+
+
+
+
+.skillbar {
+  width: 100%;
+  background-color: rgb(165, 165, 165);
+}
+
+.skill {
+  color: white;
+  text-align: right;
+  padding-bottom: 10px;
+  padding-top: 10px;
+}
+
+.skillbar .percent90 {
+  width: 90%;
+  background-color: red
+}
+
+.skillbar .percent60 {
+  width: 60%;
+  background-color: green
 }
